--- a/BlazorTopNavBar/Components/Layout/NavMenu.razor.css
+++ b/BlazorTopNavBar/Components/Layout/NavMenu.razor.css
@@ -51,13 +51,13 @@
     padding-bottom: 0.5rem;
 }
 
-    .nav-item:first-of-type {
+/*    .nav-item:first-of-type {
         padding-top: 1rem;
     }
 
     .nav-item:last-of-type {
         padding-bottom: 1rem;
-    }
+    }*/
 
     .nav-item ::deep .nav-link {
         color: #d7d7d7;
@@ -99,7 +99,11 @@
         display: block;
 
         /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
+       /* height: calc(100vh - 3.5rem);
+        overflow-y: auto;*/
     }
+}
+
+.topnav {
+    background-image: linear-gradient(90deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
