--- a/BlazorTopNavBar/Components/Layout/NewNavMenu.razor
+++ b/BlazorTopNavBar/Components/Layout/NewNavMenu.razor
@@ -1,12 +1,4 @@
-﻿
-
-@* <div class="top-row ps-3 navbar navbar-dark" id="hiddenbar">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorTopNavBar</a>
-    </div>
-</div> *@
-
-<div class="top-row ps-3 navbar navbar-dark" id="hiddenbar">
+﻿<div class="top-row ps-3 navbar navbar-dark" id="hiddenbar">
     <div class="container-fluid" id="hiddenbrand">
         <a class="navbar-brand" href="">BlazorTopNavBar</a>
     </div>
@@ -15,40 +7,25 @@
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-        <div class="topnav">
-            <nav class="nav flex" id="navdirection">
-                <div class="nav-item px-2">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-                    </NavLink>
-                </div>
+    <div class="topnav">
+        <nav class="nav flex" id="navdirection">
+            <div class="nav-item px-1">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
 
-                <div class="nav-item px-2">
-                    <NavLink class="nav-link" href="counter">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </div>
+            <div class="nav-item px-1">
+                <NavLink class="nav-link" href="counter">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                </NavLink>
+            </div>
 
-                <div class="nav-item px-2">
-                    <NavLink class="nav-link" href="weather">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-                    </NavLink>
-                </div>        
-            </nav>
-        </div>
-
+            <div class="nav-item px-1">
+                <NavLink class="nav-link" href="weather">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                </NavLink>
+            </div>        
+        </nav>
+    </div>
 </div>
-
-@*     <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav> *@
