--- a/BlazorTopNavBar/Components/Layout/NewNavMenu.razor
+++ b/BlazorTopNavBar/Components/Layout/NewNavMenu.razor
@@ -1,13 +1,13 @@
-﻿<div class="top-row ps-3 navbar navbar-dark" id="hiddenbar">
-    <div class="container-fluid" id="hiddenbrand">
-        <a class="navbar-brand" href="">BlazorTopNavBar</a>
+﻿<div class="topnav">
+    <div class="top-row ps-3 navbar navbar-dark" id="hiddenbar">
+        <div class="container-fluid" id="hiddenbrand">
+            <a class="navbar-brand" href="">BlazorTopNavBar</a>
+        </div>
     </div>
-</div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+    <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <div class="topnav">
+    <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
         <nav class="nav flex" id="navdirection">
             <div class="nav-item px-1">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
